client: handle asterisk as path in requests

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=701266